--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
     <script src="Scripts/templates.js"></script>
     <script src="Scripts/main.js"></script>
     <script src = "Scripts/deputies_stub.js"></script>
+    <script src = "Scripts/coords_dict.js"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="Content/styles.css">
