additional static graph

--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jade/1.11.0/jade.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jade/1.11.0/runtime.min.js"></script>
+    <script src="http://d3js.org/d3.v3.min.js"></script>
 
     <script src="Scripts/templates.js"></script>
     <script src="Scripts/main.js"></script>
@@ -18,5 +19,6 @@
 
   <body>
     <div class="my-container"></div>
+    <svg class="chart"></svg>
   </body>
 </html>
