--- a/main.html
+++ b/main.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
+    <meta charset="UTF-8">
     <title>Votación</title>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
@@ -18,7 +19,12 @@
   </head
 
   <body>
-    <div class="my-container"></div>
+    <div class="cabeza"></div>
+    <div class="content-data">
+      <h1>¿Qué proyecto de ley desea analizar?</h1>
+      <h3>resultados de la votación</h3>
+    </div>
     <svg class="chart"></svg>
+    <div class="my-container"></div>
   </body>
 </html>
